<resources>
    <string name="app_name">Week12</string>
    <string name="student_id">Student ID:</string>
    <string name="student_name">Student Name:</string>
    <string name="programme">Programme:</string>
    <string name="search">SEARCH</string>
    <string name="get_all">GET ALL</string>
    <string name="add">ADD</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="prog">Programme</string>
</resources>